--- a/sections/03-freertos-porting.tex
+++ b/sections/03-freertos-porting.tex
@@ -3,11 +3,17 @@
 \section{FreeRTOS Porting}
 
 \begin{frame}{Overview}
-    \begin{itemize}
-        \item To test the \textbf{FreeRTOS Porting} on \textbf{QEMU}, a very simple application was created.
-        \item The application runs a basic task that prints a message every second.
-        \item If everything works correctly, it means that the \textbf{FreeRTOS Porting} has been successfully implemented.
-    \end{itemize}
+    \begin{columns}
+        \column{0.6\textwidth}
+        \begin{itemize}
+            \item To test the \textbf{FreeRTOS Porting} on \textbf{QEMU}, a very simple application was created.
+            \item The application runs a basic task that prints a message every second.
+            \item If everything works correctly, it means that the \textbf{FreeRTOS Porting} has been successfully implemented.
+        \end{itemize}
+        \column{0.4\textwidth}
+        \centering
+        \includegraphics[width=0.9\linewidth]{../images/FreeRTOS_logo.png}
+    \end{columns}
 \end{frame}
 
 \begin{frame}{Setting Up FreeRTOS}
