--- a/sections/02-qemu-emulation.tex
+++ b/sections/02-qemu-emulation.tex
@@ -3,18 +3,24 @@
 \section{QEMU Board Emulation}
 
 \begin{frame}{Custom QEMU Version}
-    \begin{itemize}
-        \item Emulate the NXP S32K3X8EVB board, which is not natively supported by QEMU.
-        \item Ensure proper emulation of the CPU (ARM Cortex-M7), memory map, and peripherals.
-    \end{itemize}
+    \begin{columns}
+        \column{0.7\textwidth}
+        \begin{itemize}
+            \item Emulate the \textbf{NXP S32K3X8EVB} board, which is not natively supported by QEMU.
+            \item Ensure proper emulation of the \textbf{CPU (ARM Cortex-M7)}, memory map, and peripherals.
+        \end{itemize}
+        \column{0.3\textwidth}
+        \centering
+        \includegraphics[width=0.7\linewidth]{../images/qemu_logo_1.png}
+    \end{columns}
 \end{frame}
 
 \begin{frame}{Technical Details}
     \begin{itemize}
-        \item Added a new machine model to QEMU for the S32K3X8EVB board.
-        \item Used previous QEMU implementations as reference (ARMv7-M architecture).
+        \item Added a new machine model to \textbf{QEMU} for the \textbf{S32K3X8EVB} board.
+        \item Used previous QEMU implementations as reference (\textbf{ARMv7-M} architecture).
         \item Implemented custom initialization routines for memory and peripherals.
-        \item S32K358EVB board has the following specification:
+        \item \textbf{S32K358EVB} board has the following specification:
             \begin{itemize}
                 \item ARM Cortex-M7 CPU.
                 \item \(\sim \)8MB Flash memory, 768KB SRAM, 256KB DTCM, and 128KB ITCM.
